# parseGutenberg

./: .gitignore  CMakeLists.txt  README.md
inc/: Book.h  GutenbergParser.h  KKKLogger.h
src/: Book.cpp  GutenbergParser.cpp  Markup.cpp  main.cpp
tests/: Book_Tests.cpp  CMakeLists.txt  CMarkup_Tests.cpp  GutenbergParser_Tests.cpp  TestFilePaths.h  test.xml
